--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^4.3.2",
     "swagger-client": "^3.8.25",
     "yarn-run-all": "^3.1.1"
   },
